--- a/project/frontend/locales/en.json
+++ b/project/frontend/locales/en.json
@@ -30,5 +30,7 @@
   "create_account_content": "YOUR ACCOUNT HAS BEEN CREATED",
   "delete_friend_content": "Are you sure you want to delete this contact ?",
   "back_to_login": "Back to login",
-  "friend_requests": "Friend Requests"
+  "friend_requests": "Friend Requests",
+  "decline": "Decline",
+  "accept": "Accept"
 }
