--- a/project/frontend/locales/th.json
+++ b/project/frontend/locales/th.json
@@ -1,33 +1,41 @@
 {
   "welcome": "ยินดีต้อนรับ",
   "to": "เข้าสู่",
-  "play": "เล่นเกมส์",
+  "play": "เริ่ม",
   "english": "อังกฤษ",
   "thai": "ไทย",
   "created_by": "จัดทำโดย",
   "win_lose": "ชนะ / แพ้",
-  "total": "TOTAL",
-  "tour_won": "TOURNAMENT WON",
-  "tour_join": "TOURNAMENT JOIN",
-  "friends": "Friends",
-  "match_history": "MATCH_HISTORY >>",
-  "leaderboard": "LEADERBOARD >>",
-  "back": "Back",
-  "delete_friend": "Delete friend",
-  "save": "Save",
+  "total": "รวม",
+  "tour_won": "ชนะการแข่งขัน",
+  "tour_join": "เข้าร่วมการแข่งขัน",
+  "friends": "เพื่อน",
+  "match_history": "ประวัติการเเข่งขัน >>",
+  "leaderboard": "อันดับผู้เล่น >>",
+  "back": "ย้อนกลับ",
+  "delete_friend": "ลบเพื่อน",
+  "save": "บันทึก",
   "avatar_name": "ชื่อตัวละคร",
   "email": "อีเมล",
-  "password": "Password",
-  "confirm_password": "Confirm Password",
-  "edit_profile_warning": "Your changes will be lose if you don’t save them",
-  "about_me": "About me...",
-  "confirm_logout": "CONFIRM LOGOUT",
-  "yes": "Yes",
-  "no": "No !!",
-  "confirm_logout_content": "Oh no !! You’re leaving........ Are you sure you want to logout from our Pong42 ?",
-  "success": "SUCCESS",
-  "continue": "Continue",
-  "create_account_content": "YOUR ACCOUNT HAS BEEN CREATED",
-  "delete_friend_content": "Are you sure you want to delete this contact ?",
-  "back_to_login": "Back to login"
+  "password": "รหัสผ่าน",
+  "confirm_password": "ยืนยันรหัสผ่าน",
+  "edit_profile_warning": "หากไม่ได้ทำการบันทึกการเปลี่ยนแปลงจะหายไป",
+  "about_me": "เกี่ยวกับฉัน...",
+  "confirm_logout": "ยืนยันการออกจากระบบ",
+  "yes": "ใช่",
+  "no": "ไม่ !!",
+  "confirm_logout_content": "โอ้ ไม่! ... คุณแน่ใจหรือว่าต้องการออกจาก Pong42?",
+  "success": "สำเร็จ",
+  "continue": "ดำเนินการต่อ",
+  "create_account_content": "บัญชีของคุณถูกสร้างขึ้นเรียบร้อยแล้ว",
+  "delete_friend_content": "คุณแน่ใจหรือว่าต้องการลบข้อมูลผู้ใช้นี้?",
+  "back_to_login": "กลับสู่หน้าล็อกอิน",
+  "friend_requests": "คำขอเป็นเพื่อน",
+  "decline": "ปฏิเสธ",
+  "accept": "ยอมรับ",
+  "error_login": "ชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง!",
+  "error_username_invalid": "ชื่อผู้ใช้ต้องเป็นตัวอักษรหรือตัวเลข และต้องมีอย่างน้อย 6 ตัวอักษร",
+  "error_username_same": "ชื่อผู้ใช้นี้ถูกใช้ไปแล้ว!",
+  "error_confirm_password": "รหัสผ่านต้องตรงกัน!",
+  "error_display_name_same": "ชื่อนี้ถูกใช้ไปแล้ว!"
 }
