update add select france language

--- a/project/frontend/locales/en.json
+++ b/project/frontend/locales/en.json
@@ -37,5 +37,7 @@
   "error_username_invalid": "Username must be alphabet or number, At least 6 character",
   "error_username_same": "This username already taken!",
   "error_confirm_password": "Password must be the same!",
-  "error_display_name_same": "This name already taken!"
+  "error_display_name_same": "This name already taken!",
+  "error_server": "Can't connect to the server!",
+  "france": "France"
 }
