fixed: erased _ from history btn

--- a/project/frontend/locales/en.json
+++ b/project/frontend/locales/en.json
@@ -10,7 +10,7 @@
   "tour_won": "TOURNAMENT WON",
   "tour_join": "TOURNAMENT JOIN",
   "friends": "Friends",
-  "match_history": "MATCH_HISTORY >>",
+  "match_history": "MATCH HISTORY >>",
   "leaderboard": "LEADERBOARD >>",
   "back": "Back",
   "delete_friend": "Delete friend",
