--- a/project/frontend/locales/en.json
+++ b/project/frontend/locales/en.json
@@ -47,5 +47,7 @@
   "player": "Player",
   "win": "Win",
   "lose": "Lose",
-  "score": "Score"
+  "score": "Score",
+  "confirm_exit": "CONFIRM EXIT",
+  "confirm_exit_content": "Are you sure you want to exit from game ?"
 }
