--- a/project/frontend/locales/en.json
+++ b/project/frontend/locales/en.json
@@ -49,5 +49,9 @@
   "lose": "Lose",
   "score": "Score",
   "confirm_exit": "CONFIRM EXIT",
-  "confirm_exit_content": "Are you sure you want to exit from game ?"
+  "confirm_exit_content": "Are you sure you want to exit from game ?",
+  "create_room": "CREATE ROOM",
+  "room_name": "Room Name",
+  "confirm": "Confirm",
+  "close": "Close"
 }
