--- a/project/frontend/locales/fr.json
+++ b/project/frontend/locales/fr.json
@@ -10,8 +10,9 @@
   "tour_won": "TOURNAMENT GAGNE",
   "tour_join": "REJOINDRE TOURNAMENT",
   "friends": "Amis",
-  "match_history": "HISTORIQUE DES MATCHS >>",
-  "leaderboard": "CLASSEMENT >>",
+  "match_history": "HISTORIQUE DES MATCHS",
+  "match_history_btn": "HISTORIQUE DES MATCHS >>",
+  "leaderboard_btn": "CLASSEMENT >>",
   "back": "Précédent",
   "delete_friend": "Supprimer un ami",
   "save": "Sauvegarder",
