--- a/project/frontend/locales/th.json
+++ b/project/frontend/locales/th.json
@@ -10,8 +10,9 @@
   "tour_won": "ชนะการแข่งขัน",
   "tour_join": "เข้าร่วมการแข่งขัน",
   "friends": "เพื่อน",
-  "match_history": "ประวัติการเเข่งขัน >>",
-  "leaderboard": "อันดับผู้เล่น >>",
+  "match_history": "ประวัติการเเข่งขัน",
+  "match_history_btn": "ประวัติการเเข่งขัน >>",
+  "leaderboard_btn": "อันดับผู้เล่น >>",
   "back": "ย้อนกลับ",
   "delete_friend": "ลบเพื่อน",
   "save": "บันทึก",
