--- a/project/frontend/locales/en.json
+++ b/project/frontend/locales/en.json
@@ -58,5 +58,10 @@
   "game_menu": "GAME MENU >>",
   "player1": "Player1",
   "player2": "Player2",
-  "date": "Date"
+  "date": "Date",
+  "resend_code": "Resend code",
+  "go_back_and_edit": "< Go back and edit",
+  "2fa_authen_header": "Enable two-factor authentication",
+  "2fa_authen_body1": "We have sent a verification code to ",
+  "2fa_authen_body2": " Please enter it here."
 }
