--- a/project/frontend/locales/en.json
+++ b/project/frontend/locales/en.json
@@ -63,5 +63,6 @@
   "go_back_and_edit": "< Go back and edit",
   "2fa_authen_header": "Enable two-factor authentication",
   "2fa_authen_body1": "We have sent a verification code to ",
-  "2fa_authen_body2": " Please enter it here."
+  "2fa_authen_body2": " Please enter it here.",
+  "add_friend": "Add friend +"
 }
