--- a/project/frontend/locales/fr.json
+++ b/project/frontend/locales/fr.json
@@ -38,5 +38,32 @@
   "error_username_invalid": "Le nom d'utilisateur doit être composé d'une lettre ou d'un chiffre, au moins 6 caractères",
   "error_username_same": "Ce nom d'utilisateur est déjà pris !",
   "error_confirm_password": "Le mot de passe doit être le même !",
-  "error_display_name_same": "Ce pseudo est déjà pris !"
+  "error_display_name_same": "Ce pseudo est déjà pris !",
+  "error_server": "Impossible de se connecter au serveur !",
+  "france": "France",
+  "back_to_home": "Retour à l'accueil",
+  "play_again": "Rejouer",
+  "winner": "Le Gagnant",
+  "rank": "Rang",
+  "player": "Joueur",
+  "win": "Gagné",
+  "lose": "Perdu",
+  "score": "Score",
+  "confirm_exit": "CONFIRMER LA FERMETURE",
+  "confirm_exit_content": "Êtes-vous sûr de vouloir quitter le jeu ?",
+  "create_room": "CRÉER UNE SALLE",
+  "room_name": "Nom de la salle",
+  "confirm": "Confirmer",
+  "close": "Fermer",
+  "game_menu": "MENU DU JEU >>",
+  "player1": "Joueur1",
+  "player2": "Joueur2",
+  "date": "Date",
+  "resend_code": "Renvoyer le code",
+  "go_back_and_edit": "< Retour pour modifier",
+  "2fa_authen_header": "Activer l'authentification à deux facteurs",
+  "2fa_authen_body1": "Nous avons envoyé un code de vérification à ",
+  "2fa_authen_body2": " Veuillez le saisir ici.",
+  "add_friend": "Ajouter un ami +",
+  "direct_messages": "Messages Directs"
 }
