Add: pupup button back to game munu

--- a/project/frontend/locales/fr.json
+++ b/project/frontend/locales/fr.json
@@ -42,6 +42,7 @@
   "error_server": "Impossible de se connecter au serveur !",
   "france": "France",
   "back_to_home": "Retour à l'accueil",
+  "back_to_game_menu": "Retour à menu du jeu",
   "play_again": "Rejouer",
   "winner": "Le Gagnant",
   "rank": "Rang",
