--- a/project/frontend/locales/en.json
+++ b/project/frontend/locales/en.json
@@ -42,6 +42,7 @@
   "error_server": "Can't connect to the server!",
   "france": "France",
   "back_to_home": "Back to Home",
+  "back_to_game_menu": "Back to Game Menu",
   "play_again": "Play again",
   "winner": "The Winner",
   "rank": "Rank",
