--- a/project/frontend/locales/th.json
+++ b/project/frontend/locales/th.json
@@ -42,6 +42,7 @@
   "error_server": "ไม่สามารถเชื่อมต่อกับเซิร์ฟเวอร์ได้!",
   "france": "ฝรั่งเศส",
   "back_to_home": "กลับสู่หน้าหลัก",
+  "back_to_game_menu": "กลับสู่หน้าเมนูเกมส์",
   "play_again": "เล่นใหม่อีกครั้ง!",
   "winner": "ผู้ชนะ",
   "rank": "อันดับผู้เล่น",
