--- a/project/frontend/locales/fr.json
+++ b/project/frontend/locales/fr.json
@@ -35,7 +35,7 @@
   "decline": "Refuser",
   "accept": "Accepter",
   "error_login": "Identifiant ou mot de passe incorrect!",
-  "error_username_invalid": "Le nom d'utilisateur doit être composé d'une lettre ou d'un chiffre, au moins 6 caractères",
+  "error_username_invalid": "Le nom d'utilisateur doit être composé d'une lettre ou d'un chiffre, au moins 4 caractères",
   "error_username_same": "Ce nom d'utilisateur est déjà pris !",
   "error_confirm_password": "Le mot de passe doit être le même !",
   "error_display_name_same": "Ce pseudo est déjà pris !",
@@ -66,5 +66,6 @@
   "2fa_authen_body1": "Nous avons envoyé un code de vérification à ",
   "2fa_authen_body2": " Veuillez le saisir ici.",
   "add_friend": "Ajouter un ami +",
-  "direct_messages": "Messages Directs"
+  "direct_messages": "Messages Directs",
+  "error_password_invalid": "Le mot de passe doit avoir au moins 4 caractères."
 }
