--- a/project/frontend/locales/th.json
+++ b/project/frontend/locales/th.json
@@ -35,7 +35,7 @@
   "decline": "ปฏิเสธ",
   "accept": "ยอมรับ",
   "error_login": "ชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง!",
-  "error_username_invalid": "ชื่อผู้ใช้ต้องเป็นตัวอักษรหรือตัวเลข และต้องมีอย่างน้อย 6 ตัวอักษร",
+  "error_username_invalid": "ชื่อผู้ใช้ต้องเป็นตัวอักษรหรือตัวเลข และต้องมีอย่างน้อย 4 ตัวอักษร",
   "error_username_same": "ชื่อผู้ใช้นี้ถูกใช้ไปแล้ว!",
   "error_confirm_password": "รหัสผ่านต้องตรงกัน!",
   "error_display_name_same": "ชื่อนี้ถูกใช้ไปแล้ว!",
@@ -66,5 +66,6 @@
   "2fa_authen_body1": "เราได้ส่งรหัสยืนยันไปยัง",
   "2fa_authen_body2": " กรุณาใส่รหัสที่นี่",
   "add_friend": "เพิ่มเพื่อน +",
-  "direct_messages": "ข้อความส่วนตัว"
+  "direct_messages": "ข้อความส่วนตัว",
+  "error_password_invalid": "รหัสผ่านต้องมีอย่างน้อย 4 ตัวอักษร"
 }
